[package]
name = "tests"
version = "0.1.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "=1.4.1"
casper-types = "=1.4.1"
casper-engine-test-support = "=1.4.1"
casper-hashing = "=1.4.1"
test-env = { path = "../utils/test-env" }
hex = "0.4.3"
blake2 = "0.9.1"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]